--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -20,10 +20,15 @@
 }
 .list {
     padding-top: 12px;
+    display: flex;
+    list-style-type: none;
 }
 .list a {
     text-decoration: none;
     padding: 10px;
     color: #0091b2;
     font-size: 18px; 
+}
+.list a:hover {
+    color: #feb826;
 }
