--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -3,18 +3,18 @@
     justify-content: center;
 }
 .minus {
-    margin-top: 25px;
+    margin-top: 15px;
+    font-size: 30px;
     padding-right: 80px;
-    padding-bottom: 20px;
 }
 .number {
     font-size: 20px;
     padding-bottom: 0px;
 }
 .plus {
-    margin-top: 25px;
+    margin-top: 15px;
+    font-size: 30px;
     padding-left: 80px;
-    padding-bottom: 20px;
 }
 .addItem {
     background-color: lightblue;
