--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,11 +1,11 @@
 .greeting {
     display: flex;
-    font-size: 40px;
-    color: darkblue;
-    font-weight: 600;
-    height: 250px;
+    font-size: 20px;
+    height: 100px;
     justify-content: center;
     align-items: center;
-    text-decoration: overline;
 
+}
+.full-product {
+    display: flex;
 }
