--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -3,12 +3,13 @@
     width: 300px;
     text-align: center;
     margin: 20px;
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px #feb826;;
 }
 
 .product-name {
     color:#feb826;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .product-image {
@@ -23,7 +24,12 @@ img {
 
 .product-price {
     font-size: 18px;
+    margin-top: 20px;
 }
 .product-detail {
     font-size: 14px;
+}
+
+a .navbar-item {
+    color: red;
 }
