--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,35 +1,21 @@
-.nav {
-    background-color:lightblue;
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 10px;
+.navbar {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-.logoWrap {
-    display: flex;
-}
-.title {
+.name {
     color:#feb826;
-    font-size: 24px;
-    margin: 0;
-    margin-top: 20px;
+    font-size: 28px;
+    margin-left: 5px;
+    margin-top: 8px;
 }
 .mainLogo {
     width: 43px;
     height: 57px;
-    margin-top: 12px;
 }
-.list {
-    display: flex;
-    list-style-type: none;
-    margin-top: 20px;
+.navbar-item img {
+    margin-top: 5px;
 }
-.list a {
-    text-decoration: none;
-    padding: 10px;
-    color: #0091b2;
-    font-size: 18px; 
-}
-.list a:hover {
-    color: #feb826;
+div .navbar-menu .navbar-item :hover{
+    background-color:#feb826;
+    color: white;
 }
