--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,35 +1,25 @@
-.product {
-    height: 350px;
-    width: 300px;
-    text-align: center;
-    margin: 20px;
-    box-shadow: 0px 0px 10px 0px #feb826;;
+.card {
+    height: 380px;
 }
-
-.product-name {
-    color:#feb826;
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-
 .product-image {
     height: 200px;
 }
-
 img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.product-price {
-    font-size: 18px;
-    margin-top: 20px;
+.is-shady {
+    background: #fff;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0;
+    transition: all .2s ease-in-out; 
 }
-.product-detail {
-    font-size: 14px;
+  
+  .is-shady:hover {
+    box-shadow: 0 10px 16px rgba(0, 0, 0, 0.13), 0 6px 6px rgba(0, 0, 0, 0.19); 
 }
 
-a .navbar-item {
-    color: red;
+.funko-card {
+    padding: 20px;
 }
