--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,8 +1,5 @@
-.cart {
-    width: 33px;
-    height: 51px;
-    margin-top: -10px;
-}
-#cartWidget {
-    margin-top: 5px;
+.cart-bubble .bubble {
+    display: inline;
+    padding-top: 0px;
+    padding-bottom: 4px;
 }
