--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -10,6 +10,12 @@
     justify-content: center;
 }
 
+@media only screen and (max-width: 768px) {
+    .detail-product {
+        display: block;
+    }
+}
+
 #more-info {
     display: flex;
     margin-top: 15px;
